# hwge

./: CMakeLists.txt  LICENSE.md  README.txt  build.cmd  run.cmd  run.sh  version.txt
include/hwge/: args.hpp  bmp.hpp  freetype.hpp  glew.hpp  glfw.hpp  hwge.hpp  input.hpp  keycodes.hpp  objloader.hpp  png.hpp  shader.hpp  shader_utils.hpp  status_codes.hpp  text2D.hpp  utils.hpp  vboutils.hpp
src/: args.cpp  bmp.cpp  freetype.cpp  glew.cpp  glfw.cpp  hwge.cpp  input.cpp  objloader.cpp  png.cpp  shader.cpp  shader_utils.cpp  text2D.cpp  utils.cpp  vboutils.cpp
testproject/: CMakeLists.txt
testproject/assets/shaders/: cube.fs  cube.vs  cube_tex.fs  cube_tex.vs  tex.fs  tex.vs  tex_transparent.fs  text.fs  text.vs  text2d.fs  text2d.vs  triangle.fs  triangle.vs
testproject/assets/textures/: stone.dds  uvmap.dds
testproject/src/: main.cpp  main.cpp.bak  main.cpp.tmp
